fix design: header spacing and remove outline none

--- a/docs/styles/site.cerulean.css
+++ b/docs/styles/site.cerulean.css
@@ -6756,6 +6756,10 @@ button.close {
 .navbar-brand {
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
+
+.navbar .navbar-nav > li > a .caret{
+  margin-left: 6px;
+}
 @media (max-width: 767px) {
   .navbar .dropdown-header {
     color: #fff;
